# stripe_reconciliation_agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: TECHNICAL_DOC.md
src/stripe_recon/: bank_parser.py  config.py  exceptions.py  main.py  models.py  reconciler.py  reporter.py  stripe_client.py
tests/: test_bank_parser.py  test_exceptions.py  test_reconciler.py
tests/fixtures/: sample_payouts.json
tests/fixtures/sample_bank_statements/: missing_entry.csv  perfect_match.csv  timing_difference.csv  with_exceptions.csv
